--- a/src/components/RenderKeyTerms/RenderKeyTerms.module.css
+++ b/src/components/RenderKeyTerms/RenderKeyTerms.module.css
@@ -48,3 +48,16 @@ margin-left: 8px;
     border-radius: 12px; 
     margin: 10px 10px 10px 25px;
 }
+
+#domainTextMultiselect
+{
+    font-family: 'Poppins',sans-serif;
+    font-size: 14px;
+}
+
+#bottomRow
+{
+    border-bottom: 1px solid #00A5FB;
+    padding-top: 10px;
+    padding-bottom: 8px;
+}
