--- a/src/components/AwardsModal/AwardsModal.module.css
+++ b/src/components/AwardsModal/AwardsModal.module.css
@@ -7,6 +7,7 @@
     border-bottom: 1px solid #ccc;
     font-family: 'Poppins','Lato',sans-serif;
     font-size: 18px !important;
+    text-align: center!important;
 }
 
 .profileinfo
@@ -19,7 +20,6 @@
 
 .awardsAtrributes
 {
-    text-align: center;
     font-size: 19px;
     font-family: 'Poppins','Lato',sans-serif;
 }
