--- a/src/components/PdfDocumentSourcedResult/PdfDocumentSourcedResult.module.css
+++ b/src/components/PdfDocumentSourcedResult/PdfDocumentSourcedResult.module.css
@@ -25,3 +25,45 @@
     padding: 10px;
     height: 65px;
 }
+
+.searchSuggestionVerifyButton
+{
+    background: #fff1f1 !important;
+    border: 1px solid #efcdcd !important;
+    margin-left: 10px;
+    vertical-align: 2px;
+    padding: 2px 5px 7px 5px;
+    border-radius: 2px;
+    cursor: pointer;
+    font-family: 'Poppins','Lato',sans-serif;
+}
+
+.helpfulButton
+{
+    margin-left: 10px;
+    vertical-align: 2px;
+    padding: 2px 5px 7px 5px;
+    background: #f4f4f4;
+    border-radius: 2px;
+    border: 1px solid #ececec;
+    cursor: pointer;
+}
+
+#btnHelpful
+{
+    vertical-align: 2px;
+    font-family: 'Poppins',sans-serif;
+    padding: 2px 5px 5px;
+    border-radius: 2px;
+    cursor: pointer;
+    font-weight: bold;
+    color: #4f6384;
+} 
+ 
+.helpfulButton img {
+    width: 25px;
+    height: 25px;
+    float: right;
+    margin-top: 3px;
+    margin-left: 2px;
+}
