--- a/src/components/PdfDocumentSourcedResult/PdfDocumentSourcedResult.module.css
+++ b/src/components/PdfDocumentSourcedResult/PdfDocumentSourcedResult.module.css
@@ -17,7 +17,7 @@
     border: 1px solid #ececec;
     border-radius: 5px;
     margin-bottom: 5px;
-    padding:0px;
+    padding:5px;
 }
 
 .midContainer
@@ -47,6 +47,13 @@
     border-radius: 2px;
     border: 1px solid #ececec;
     cursor: pointer;
+    font-family: 'Poppins','Lato',sans-serif;
+    font-weight: bold;
+    color: #4f6384;
+    font-size: 14px;
+    vertical-align: -3px;
+    float: right;
+    margin-left: 50px;
 }
 
 #btnHelpful
@@ -61,8 +68,8 @@
 } 
  
 .helpfulButton img {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     float: right;
     margin-top: 3px;
     margin-left: 2px;
@@ -71,11 +78,66 @@
 .userNameBot
 {
     font-weight: bold;
+    font-family: 'Poppins','Lato',sans-serif;
+    font-size:14px;
+    padding-left: 5px;
     
 }
 
 .answerTextBlock
 {
     font-family: 'Poppins','Lato',sans-serif;
-    font-weight: 300;
+    line-height: 1.1;
+    font-size: 14px;
+}
+
+.ratingText
+{
+    color: #949494;
+    font-size: 12px;
+    font-family: 'Poppins','Lato',sans-serif;
+}
+
+.verifyWithExpert
+{
+    font-family: 'Poppins','Lato',sans-serif;
+    font-size: 14px;
+}
+
+.searchSuggestionVerifyButton
+{
+background: #fff1f1 !important;
+border: 1px solid #c6acac;
+font-family: 'Poppins','Lato',sans-serif;
+margin-left: 10px;
+vertical-align: 2px;
+padding: 2px 5px 7px 5px;
+border-radius: 2px;
+}
+
+.yesText
+{
+    font-family: 'Poppins','Lato',sans-serif;
+    font-weight: bold;
+    color:#4f6384;
+    font-size: 14px;
+    margin-right: 3px;
+    vertical-align: -3px;
+}
+
+.datestamp
+{
+    color: #949494;
+    font-size: 12px;
+    font-family: 'Poppins','Lato',sans-serif;
+    display: block;
+    margin-left: 5px;
+    margin-left: 45px;
+}
+
+.clipboardPaste
+{
+    float: right;
+    font-size: 20px;
+    color:#777;
 }
