--- a/src/components/ThreadResultReply/ThreadResultReply.module.css
+++ b/src/components/ThreadResultReply/ThreadResultReply.module.css
@@ -7,3 +7,12 @@
     border: 1px solid lightgray;
     border-radius: 20px;
 }
+
+.repliesDiv
+{
+    overflow-y: hidden;
+    padding: 0px 20px;
+    margin: 7px 0px 7px 0px;
+    font-size: 14px;
+    font-weight: normal;
+}
