--- a/src/components/MyHistory/MyHistory.module.css
+++ b/src/components/MyHistory/MyHistory.module.css
@@ -20,58 +20,14 @@
     padding-bottom: 8px;
 }
 
-.seekerFavoriteQuestions
+.myHistoryHeading
 {
     font-size: 20px;
     color: #075491;
-    font-weight: bold;
-    font-family: 'Poppins', 'Lato', sans-serif;
-    display: inline-block;
-}
-
-.keytermheading
-{
-    font-size: 20px;
-    color: #075491;
-    display: block !important;
     margin-bottom: 12px;
     font-family: 'Poppins','Lato',sans-serif;
-}
-
-.backIconKeyTerm
-{
-    padding-bottom: 3px;
-    margin-right: 7px;
-    max-height: 20px;
-}
-
-.keyTermName
-{
-    font-size: 20px;
-    color: #075491;
-    float: left;
-    padding-bottom: 6px;
-    font-family: 'Poppins','Lato',sans-serif;
     font-weight: bold;
-}
-
-.keyTermCount
-{
-    color: #fff;
-    background: #4BCAFF;
-    border-radius: 5px;
-    padding: 0px 5px 0px 5px;
-    margin-left: 8px;
-    font-size: 15px;
     float: left;
-}
-
-.selectKeyTerm
-{
-    font-family: 'Poppins','Lato',sans-serif;
-    font-size: 12px;
-    display: inline-block;
-    width:70%;
 }
 
 .viewByText
@@ -81,10 +37,27 @@
     padding-right: 10px;
 }
 
-.pageTop
+.selectHistory
 {
-    height: calc(100vh - 122px);
-    margin-bottom: 70px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    width: 70%;
+    display: inline-block;
+    font-family: 'Poppins','Lato',sans-serif;
+    font-size: 12px;
+}
+
+.historyCount
+{
+    color: #fff;
+    background: #4BCAFF;
+    border-radius: 5px;
+    padding: 0px 5px 0px 5px;
+    margin-left: 8px;
+    font-size: 15px;
+    float: left;
+    font-family: 'Poppins','Lato',sans-serif;
+}
+
+.midSpacer
+{
+    padding: 5px;
 }
