--- a/src/components/RenderMyHistory/RenderMyHistory.module.css
+++ b/src/components/RenderMyHistory/RenderMyHistory.module.css
@@ -27,3 +27,12 @@
     margin: 0px 0px 10px 0px;
     font-weight: 400;
 }
+
+.timestamp
+{
+    padding-right: 12px;
+    color: gray;
+    font-size: 16px;
+    margin-bottom: 20px;
+    font-family: 'Poppins','Lato',sans-serif;
+}
