--- a/src/App.css
+++ b/src/App.css
@@ -166,15 +166,17 @@
   display: block;
   position: absolute;
   top: 51px;
-  width: 280px;
+  left:184px;
+  width: 54%;
   border: 1px solid #aaa;
   background-color: #fff;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Poppins','Lato', sans-serif;
   font-weight: 300;
   font-size: 16px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   z-index: 2;
+  text-align: left;
 }
 
 .react-autosuggest__suggestions-list {
